--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
   </header>
-  <section class="home">
+  <main class="home">
     <div class="container home__container">
       <div class="home__title-container">
         <h1 class="home__title">
@@ -58,10 +58,14 @@
             <p class="blog__review-text">Payment methods: Skrill, Neteller, webmoney, Bank transfer</p>
             <p class="blog__review-date">10.02.2023</p>
           </li>
+          <li class="blog__review">
+            <p class="blog__review-text">Payment methods: Skrill, Neteller, webmoney, Bank transfer</p>
+            <p class="blog__review-date">10.02.2023</p>
+          </li>
         </ul>
       </div>
     </div>
-  </section>
+  </main>
   <footer>
     <div class="container footer__container">
       <nav class="footer__menu">
@@ -104,5 +108,23 @@
       </div>
     </div>
   </footer>
+  <div class="banner">
+    <div class="banner__first-line">
+      <img class="banner__image" src="/src/svg/Line_Vertical_1.svg" alt="Animation">
+      <img class="banner__image" src="/src/svg/Line_Vertical_1.svg" alt="Animation">
+      <img class="banner__image" src="/src/svg/Line_Vertical_1.svg" alt="Animation">
+    </div>
+    <div class="banner__second-line">
+      <img class="banner__image" src="/src/svg/Line_Vertical_2.svg" alt="Animation">
+      <img class="banner__image" src="/src/svg/Line_Vertical_2.svg" alt="Animation">
+      <img class="banner__image" src="/src/svg/Line_Vertical_2.svg" alt="Animation">
+    </div>
+    <div class="banner__third-line">
+      <img class="banner__image" src="/src/svg/Line_Vertical_3.svg" alt="Animation">
+      <img class="banner__image" src="/src/svg/Line_Vertical_3.svg" alt="Animation">
+      <img class="banner__image" src="/src/svg/Line_Vertical_3.svg" alt="Animation">
+    </div>
+  </div>
+  <div class="background"></div>
 </body>
 </html>
